plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.verdict'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	compileOnly 'com.google.api-client:google-api-client:1.32.1'
	implementation 'io.github.cdimascio:java-dotenv:5.2.2'
	implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0"

	testImplementation("org.junit.jupiter:junit-jupiter-api:5.11.4")
	testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.11.4")
	testImplementation("org.mockito:mockito-core:5.12.0")
	testImplementation("org.mockito:mockito-junit-jupiter:5.17.0")



	// flyway
	implementation 'org.flywaydb:flyway-mysql'

//	implementation('some:dependency') {
//		exclude group: 'commons-logging', module: 'commons-logging'
//	}
}

tasks.named('test') {
	useJUnitPlatform()
}
